<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <!-- Title Bar -->

    <RelativeLayout
        android:id="@+id/login_titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D41823">

        <ImageButton
            android:id="@+id/login_titleBarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/app_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="@string/airtel_survey"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_sheet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titleBackgroundColor"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/titleTextBottomPadding"
        android:paddingTop="@dimen/titleTextTopPadding"
        android:text="@string/sheet_title_fr"
        android:textColor="@android:color/black"
        android:textSize="@dimen/titleTextSize" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/surveyor_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"



                        android:text="@string/sheet_site_name_fr"

                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:text="*"

                        android:textColor="#FF0000" />
                </LinearLayout>

                <EditText
                    android:id="@+id/sheet_sitename_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:paddingLeft="10dp"

                    android:maxLength="10"
                    android:background="@drawable/drawable_rectangle_edit_text"
                    android:singleLine="true"
                    android:visibility="visible"
                    android:textSize="15dp" >
                </EditText>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/retailermobnumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="7dp"
                        android:paddingBottom="2dp"

                        android:text="@string/sheet_site_type_fr"
                        android:layout_marginTop="10dp"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="*"
                        android:layout_marginTop="15dp"
                        android:textColor="#FF0000" />
                </LinearLayout>

                <EditText
                    android:id="@+id/sheet_typesite_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="7dp"
                    android:paddingLeft="10dp"
                    android:background="@drawable/drawable_rectangle_edit_text"
                    android:layout_marginRight="7dp"
                    android:inputType="textPassword"

                    android:textSize="15dp" >
                </EditText>
            </LinearLayout>

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/sheet_site_name"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                android:id="@+id/edt_sheet_site_name"
                android:hint="Comment"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/sheet_site_type"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edt_sheet_site_type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"

                    android:hint="Comment" />
            </LinearLayout>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/sheet_environmental_checklist_fr"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Next"
                android:layout_marginTop="30dp"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="#D41823"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>