<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <!-- Title Bar -->

    <RelativeLayout
        android:id="@+id/login_titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D41823" >

        <ImageButton
            android:id="@+id/login_titleBarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/app_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:text="@string/airtel_survey"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_titleBar"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_shelter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"

                android:text="@string/txt_shelter"
                android:textColor="@android:color/black"
                android:background="@color/titleBackgroundColor"
                android:paddingTop="@dimen/titleTextTopPadding"
                android:paddingBottom="@dimen/titleTextBottomPadding"
                android:textSize="@dimen/titleTextSize" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_shelter"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/questLayoutMarginTop"
                android:id="@+id/shelter_quest_layout_1">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/shelter_quest_layout_one">

                    <TextView
                        android:id="@+id/shelter_txt_quest_no_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:textColor="@android:color/black"
                        android:layout_marginLeft="@dimen/questNoMarginLeft"
                        android:text="1"/>

                    <TextView
                        android:id="@+id/shelter_txt_question_desc_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/txtQuestionMarginLeft"
                        android:text="@string/txt_shelter_q1"
                        android:layout_centerVertical="true"
                        android:textColor="@android:color/black"
                        android:layout_toLeftOf="@+id/shelter_rdo_grp_1"
                        android:layout_toRightOf="@+id/shelter_txt_quest_no_1"/>

                    <RadioGroup
                        android:id="@+id/shelter_rdo_grp_1"
                        android:layout_width="wrap_content"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal"
                        android:layout_centerVertical="true"
                        android:gravity="end"
                        android:layout_marginRight="@dimen/radioGroupMarginRight"
                        android:layout_height="wrap_content">

                        <RadioButton android:layout_width="wrap_content"
                            android:id="@+id/shelter_rdobtn_yes_1"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:text="Yes"></RadioButton>
                        <RadioButton android:id="@+id/shelter_rdobtn_no_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:text="No"></RadioButton>
                    </RadioGroup>
                </RelativeLayout>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/CommentEditTextMarginTop"
                    android:id="@+id/shelter_comment_1"
                    android:layout_below="@+id/shelter_quest_layout_one"
                    android:hint="Comment"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/shelter_quest_layout_1"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/questLayoutMarginTop"
                android:id="@+id/shelter_quest_layout_2">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/shelter_quest_layout_two">

                    <TextView
                        android:id="@+id/shelter_txt_quest_no_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:textColor="@android:color/black"
                        android:layout_marginLeft="@dimen/questNoMarginLeft"
                        android:text="2"/>

                    <TextView
                        android:id="@+id/shelter_txt_question_desc_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/txtQuestionMarginLeft"
                        android:text="@string/txt_shelter_q2"
                        android:layout_centerVertical="true"
                        android:textColor="@android:color/black"
                        android:layout_toLeftOf="@+id/shelter_rdo_grp_2"
                        android:layout_toRightOf="@+id/shelter_txt_quest_no_2"/>

                    <RadioGroup
                        android:id="@+id/shelter_rdo_grp_2"

                        android:layout_width="wrap_content"
                        android:layout_alignParentRight="true"
                        android:orientation="horizontal"
                        android:layout_centerVertical="true"
                        android:gravity="end"
                        android:layout_marginRight="@dimen/radioGroupMarginRight"
                        android:layout_height="wrap_content">

                        <RadioButton android:layout_width="wrap_content"
                            android:id="@+id/shelter_rdobtn_yes_2"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:text="Yes"></RadioButton>
                        <RadioButton android:id="@+id/shelter_rdobtn_no_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:text="No"></RadioButton>
                    </RadioGroup>
                </RelativeLayout>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/CommentEditTextMarginTop"
                    android:layout_below="@+id/shelter_comment_2"
                    android:id="@+id/shlter_comm"
                    android:hint="Comment"/>
            </LinearLayout>
    </LinearLayout>
           </RelativeLayout>